Added SXG mime types.