@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.sinistral</groupId>
     <artifactId>proteus-project</artifactId>
     <packaging>pom</packaging>
-    <version>0.7.0-SNAPSHOT</version>
+    <version>0.7.1-SNAPSHOT</version>
     <name>Proteus Project</name>
 
     <description>Proteus is a blazing fast minimalist Java API server framework built atop Undertow.</description>
@@ -36,7 +34,7 @@
     <scm>
         <connection>scm:git:git://github.com/noboomu/proteus.git</connection>
         <developerConnection>scm:git:ssh://github.com/noboomu/proteus.git</developerConnection>
-        <url>http://github.com/noboomu/proteus/tree/master</url>
+        <url>https://github.com/noboomu/proteus/tree/master</url>
         <tag>HEAD</tag>
     </scm>
 
@@ -120,12 +118,17 @@
         <!--            <version>2.3.0</version>-->
         <!--        </dependency>-->
 
-        <dependency>
-            <groupId>com.sun.xml.ws</groupId>
-            <artifactId>jaxws-ri</artifactId>
-            <version>4.0.1</version>
-            <type>pom</type>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.sun.xml.ws</groupId>-->
+<!--            <artifactId>jaxws-ri</artifactId>-->
+<!--            <version>4.0.1</version>-->
+<!--            <type>pom</type>-->
+<!--            <scope>import</scope>-->
+<!--        </dependency>-->
+
+        <!-- https://mvnrepository.com/artifact/jakarta.ws.rs/jakarta.ws.rs-api -->
+
+
 
 
     </dependencies>
@@ -261,15 +264,6 @@
                 <configuration>
                     <argLine>-Dconfig.file=src/test/resources/application.conf</argLine>
                     <argLine>-Dlogback.configuration=src/test/resources/logback-test.xml</argLine>
-                    <argLine>--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</argLine>
-                    <argLine>--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED</argLine>
-                    <argLine>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</argLine>
-                    <argLine>--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED</argLine>
-                    <argLine>--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED</argLine>
-                    <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED</argLine>
-                    <argLine>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</argLine>
-                    <argLine>--add-opens=java.base/java.io=ALL-UNNAMED</argLine>
-                    <argLine>--add-opens=java.base/java.util=ALL-UNNAMED</argLine>
 
                 </configuration>
             </plugin>
@@ -461,15 +455,6 @@
                     <configuration>
                         <argLine>-Dconfig.file=src/test/resources/application.conf</argLine>
                         <argLine>-Dlogback.configuration=src/test/resources/logback-test.xml</argLine>
-                        <argLine>--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</argLine>
-                        <argLine>--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED</argLine>
-                        <argLine>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</argLine>
-                        <argLine>--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED</argLine>
-                        <argLine>--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED</argLine>
-                        <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED</argLine>
-                        <argLine>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</argLine>
-                        <argLine>--add-opens=java.base/java.io=ALL-UNNAMED</argLine>
-                        <argLine>--add-opens=java.base/java.util=ALL-UNNAMED</argLine>
                     </configuration>
                 </plugin>
 
